--- a/es.html
+++ b/es.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body style="background-color: aqua;">
+    <div class="main">
+        <img src="Copia di Copia di 825716941387441.png" />
+        <button class="save-btn">
+            SAVE
+        </button>
+    </div>
 </body>
 </html>
+
+<style>
+.main {
+    position: absolute;
+    top: 15%;
+    left: 35%;
+    width: 50%;
+    margin: auto;
+}
+.save-btn {
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    position: absolute;
+    width: 80px;
+    height: 30px;
+}
+</style>
