--- a/es.html
+++ b/es.html
@@ -8,9 +8,11 @@
 <body style="background-color: aqua;">
     <div class="main">
         <img src="Copia di Copia di 825716941387441.png" />
-        <button class="save-btn">
-            SAVE
-        </button>
+        <div class="button-container">
+            <button class="save-btn">
+                SAVE
+            </button>
+        </div>
     </div>
 </body>
 </html>
@@ -30,5 +32,9 @@
     position: absolute;
     width: 80px;
     height: 30px;
+}
+.button-container {
+    position: absolute;
+    top: auto;
 }
 </style>
