--- a/es.html
+++ b/es.html
@@ -5,36 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: aqua;">
-    <div class="main">
-        <img src="Copia di Copia di 825716941387441.png" />
-        <div class="button-container">
-            <button class="save-btn">
-                SAVE
-            </button>
-        </div>
+<body>
+<div class="card">
+    <img class="card-image" src="FGDWH.webp" alt="Immagine del giocatore di calcio Federico Chiesa"/>
+    <button onclick="window.location.href='https://it.wikipedia.org/wiki/Federico_Chiesa'" class="save"><b>INFO</b></button>
+    <div>
+        <button  class="below-button1"><b>Federico Chiesa</b></button>
+        <button onclick="window.location.href='https://www.google.com/search?q=federico+chiesa&tbm=isch&ved=2ahUKEwiL1ejr4cP_AhWq7LsIHcMSCMsQ2-cCegQIABAA&oq=federico+chiesa&gs_lcp=CgNpbWcQAzIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgARQAFgAYN0EaABwAHgAgAFZiAFZkgEBMZgBAKoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=FDmKZIv7IqrZ7_UPw6Wg2Aw&bih=948&biw=1707';" class="below-button2"><b>View more</b></button>
+        <button onclick="window.location.href='https://www.juventus.com/it'" class="below-button3"><b>Club</b></button>
     </div>
+</div>
 </body>
 </html>
 
 <style>
-.main {
+body {
     position: absolute;
     top: 15%;
-    left: 35%;
-    width: 50%;
-    margin: auto;
+    left: 30%;
 }
-.save-btn {
-    background-color: red;
-    color: white;
-    border-radius: 10px;
-    position: absolute;
-    width: 80px;
-    height: 30px;
+.card {
+    width: 500px;
+    height: 550px;
 }
-.button-container {
-    position: absolute;
-    top: auto;
+.card-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: 1;
+}
+.save{
+  position: absolute;
+  left: 420px;
+  bottom: 460px;
+  z-index: 3;
+  width: 90px;
+  height: 70px;
+  background-color: red;
+  color: white;
+  border-radius: 50px;
+  cursor: pointer;
+  transform: translateX(30px);
+  opacity: 0;
+  transition: opacity .2s, transform .2s;
+  transition-timing-function: ease-in;
+}
+.card:hover .save{
+    opacity: 1;
+    transform: translateX(-30px);
+}
+.card:hover {
+    width: 520px;
+    height: 570px;
+}
+.below-button1 {
+    font-size: 30px;
+  position: absolute;
+  left: 50px;
+  bottom: 20px;
+  z-index: 3;
+  width: 270px;
+  height: 50px;
+  background-color: white;
+  color: black;
+  border-radius: 50px;
+  transform: translateY(75px);
+  opacity: 0;
+  transition: opacity .2s, transform .2s;
+  transition-timing-function: ease-in;
+}
+.below-button2 {
+  position: absolute;
+  left: 350px;
+  bottom: 20px;
+  z-index: 3;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  color: black;
+  border-radius: 50px;
+  cursor: pointer;
+  transform: translateY(75px);
+  opacity: 0;
+  transition: opacity .2s, transform .2s;
+  transition-timing-function: ease-in;
+}
+.below-button3 {
+  position: absolute;
+  left: 410px;
+  bottom: 20px;
+  z-index: 3;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  color: black;
+  border-radius: 50px;
+  cursor: pointer;
+  transform: translateY(75px);
+  opacity: 0;
+  transition: opacity .2s, transform .2s;
+  transition-timing-function: ease-in;
+}
+.card:hover .below-button1,.card:hover .below-button2,.card:hover .below-button3 {
+    opacity: 1;
+    transform: translateY(-1px);
 }
 </style>
